[package]
name = "bevy_orbits"
version = "0.2.0-rc.1"
edition = "2021"
categories = ["game-development"]
description = "A bevy plugin for creating stable orbits, and calculating transfers between them"
keywords = ["bevy", "orbit", "orbital-mechanics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/atbentley/bevy_orbits"

[dependencies]
bevy = { version = "0.14.0-rc.2", default-features = false }

[dev-dependencies]
bevy = "0.14.0-rc.2"
bevy_egui = { git = "https://github.com/Friz64/bevy_egui", rev = "421f7375e9fbb62d8facb0259b9549cdc82995e5" }
format_num = "0.1.0"
