[package]
name = "bevy_orbits"
version = "0.2.0"
edition = "2021"
categories = ["game-development"]
description = "A bevy plugin for creating stable orbits, and calculating transfers between them"
keywords = ["bevy", "orbit", "orbital-mechanics"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/atbentley/bevy_orbits"

[dependencies]
bevy = { version = "0.14", default-features = false }

[dev-dependencies]
bevy = "0.14"
bevy_egui = "0.28.0"
format_num = "0.1.0"
